--- a/css/styles.css
+++ b/css/styles.css
@@ -98,10 +98,23 @@ body{
         line-height: 1.5;
         letter-spacing: 0.02em;
         color: #2e2f42;
-        padding-top: 24px 0;
+        padding: 24px 0;
         display: block;
-        padding-top: 24px;
-        padding-bottom: 24px;
+        position: relative;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.current{
+    color: #404bbf;
+}
+.current::after{
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    content:"";
+    border-radius: 2px;
+        width: 100%;
+        height: 4px;
+        background-color: #404bbf;;
 }
 .contact-list-link{
         font-weight: 400;
@@ -111,6 +124,7 @@ body{
         color: #434455;
         padding-top: 24px;
         padding-bottom: 24px;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .contact-block{
     font-style: normal;
@@ -120,8 +134,7 @@ body{
 .hero{
     background-color: #2e2f42;
     max-width: 1440px;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 0 auto;
     padding: 188px 0;
 }
 .main-title{
@@ -153,10 +166,15 @@ body{
         letter-spacing: 0.04em;
         color: #fff;
         background-color: #4d5ae5;
+        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .order-service:hover,
 .order-service:focus {
     background-color: #404BBF
+}
+.background-picture{
+    width: 1440px;
+    height: 600px;
 }
 /* ========Benefits styles======== */
 .benefits{
@@ -279,6 +297,34 @@ body{
     border-top: none;
     margin-bottom: 8px;
 }
+.overlay{
+    position: relative;
+    overflow: hidden;
+
+}
+.overlay-text{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+        height: 100%;
+        transform: translateY(100%);
+        background-color: #4d5ae5;
+        font-family: "Roboto", sans-serif;
+            font-weight: 400;
+            font-size: 16px;
+            line-height: 1.5;
+            letter-spacing: 0.02em;
+            color: #f4f4fd;
+            transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+            padding-top: 40px;
+            padding-bottom: 40px;
+            padding-left: 32px;
+            padding-right: 32px;
+}
+.portfolio-photos:hover .overlay-text{
+    transform: translateY(0%);
+}
 /* ========Footer styles======== */
 .page-footer{
     background-color: #2e2f42;
@@ -308,4 +354,23 @@ body{
 }
 .color-studio{
    color: #f4f4fd
+}
+.footer-container{
+    display: flex;
+}
+.footer-logo-text{
+    margin-right: 120px;
+}
+.social-list-link{
+    display: block;
+    line-height: 0;
+    fill:#404BBF;
+    transition: stroke 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.social-list-link:hover,
+.social-list-link:focus{
+    stroke: #31D0AA;
+}
+.social-list{
+    display: flex;
 }
