--- a/css/styles.css
+++ b/css/styles.css
@@ -312,6 +312,9 @@ background-size: cover;
     border: 1px solid #e7e9fc;
     border-top: none;
     margin-bottom: 8px;
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+        0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 .overlay{
     position: relative;
@@ -340,9 +343,7 @@ background-size: cover;
 }
 .portfolio-photos:hover .overlay-text{
     transform: translateY(0%);
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-        0px 1px 1px rgba(46, 47, 66, 0.16),
-        0px 2px 1px rgba(46, 47, 66, 0.08);
+    
 }
 /* ========Footer styles======== */
 .page-footer{
@@ -377,6 +378,8 @@ background-size: cover;
 .footer-container{
     display: flex;
     align-items: baseline;
+    width: 40px;
+    height: 40px;
 }
 .footer-logo-text{
     margin-right: 120px;
