--- a/css/styles.css
+++ b/css/styles.css
@@ -266,6 +266,31 @@ background-size: cover;
 .our-team-description{
     padding: 32px 0;
 }
+.social-list-team{
+    display:flex;
+    justify-content: center;
+    gap: 24px;
+}
+.social-list-item-team{
+    width: 40px;
+    height: 40px;
+}
+.social-list-link-team{
+    width: 100%;
+    height: 100%;
+    background-color:#4d5ae5;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.social-list-link-team:hover,
+.social-list-link-team:focus {
+    background-color:#404bbf;
+}
+.social-list-icon-team{
+    fill: #f4f4fd;
+}
 /* ========Potrfolio styles======== */
 
 .portfolio-list-list{
@@ -312,9 +337,6 @@ background-size: cover;
     border: 1px solid #e7e9fc;
     border-top: none;
     margin-bottom: 8px;
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-        0px 1px 1px rgba(46, 47, 66, 0.16),
-        0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 .overlay{
     position: relative;
@@ -344,6 +366,11 @@ background-size: cover;
 .portfolio-photos:hover .overlay-text{
     transform: translateY(0%);
     
+}
+.portfolio-photos:hover{
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+        0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 /* ========Footer styles======== */
 .page-footer{
