--- a/css/styles.css
+++ b/css/styles.css
@@ -283,6 +283,7 @@ background-size: cover;
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social-list-link-team:hover,
 .social-list-link-team:focus {
